appId: com.dpf.mobile
---
- launchApp
- assertVisible: "Home"
- tapOn: "More"
- assertVisible: "Approvals"
